--- a/board-parser/Cargo.toml
+++ b/board-parser/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "board-parser"
 version = "0.1.0"
-authors = ["bausano <michael@enhance.com>"]
+authors = ["bausano <bausanomichal@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 score-counter = { path = "../score-counter" }
